--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -1,3 +1,4 @@
+
 .play-bar-container{
 
 
@@ -11,6 +12,8 @@ justify-items: center;
 padding: 0px 0.5em 1em 0.5em;
 z-index: 4;
 
+
+
 // display: flex;
 
 // justify-content: space-between;
@@ -23,6 +26,16 @@ z-index: 4;
     justify-items: center;
     gap: 0.5em;
     align-self: end;
+
+    .mobile-play-button{
+        display: none;
+        svg{
+            fill: $white;
+            width: 40px;
+            height: 40px;
+            justify-self: end;
+        }
+      }
 
 svg{
     fill: $grey-light;
