--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -89,7 +89,54 @@
   }
 
   .app-footer{
-    display: none;
+    position: fixed;
+    bottom: calc(5em - 10px);
+    padding: 10px;
+
+    // background-color: rgba(255, 0, 0, 0.24);
+    .play-bar-container{
+    }
+    .song-details-container{
+      grid-column: 1/-1;
+      width: 100%;
+      .song-text-container{
+        // display: none;
+      }
+      img{
+        border-radius: 5px;
+      }
+
+      .mobile-play-button{
+        display: flex;
+      }
+    }
+
+    .control-container{
+
+      .buttons-container{
+        display: none;
+      }
+    }
+
+    .time-container{
+      span{
+        display: none;
+      }
+      // position: relative;
+      .time-container{
+        position: absolute;
+        top: calc(3em + 10px);
+        // width: 50vh;
+        left: 5px;
+        right: 5px;
+        width: 95vw;
+
+      }
+    }
+
+    .buttons-volume-container{
+      display: none;
+    }
   }
 
   .side-bar{
@@ -97,51 +144,74 @@
   }
 
   .app-mobile-footer{
-    display: block;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background-color: black;
     display: flex;
     justify-content: space-between;
     padding: 0.5rem;
-  }
+    font-family: 'GothamLight';
+    font-size: 0.7em;
 
+  }
+  
   .app-mobile-footer{
     .home-button-container{
+      fill: $grey-light;
+      color: $grey-light;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       // gap: 0.5rem;
+      width: 80px;
     }
-
+    
     .home-button{
       width:2rem;
       height: 2rem;
     }
-
-
-
-
+    
+    
+    
+    
     .search-container{
+      fill: $grey-light;
+      color: $grey-light;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      width: 80px;
     }
-
+    
     .search{
       width:2rem;
       height: 2rem;
     }
-
+    
     .library-title{
+      fill: $grey-light;
+      color: $grey-light;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      width: 80px;
     }
 
     .library-icon{
       width:2rem;
       height: 2rem;
+    }
+
+    .active{
+      fill: $white;
+      color: $white;  
+        text-decoration: none;
+
     }
   }
 
