--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -215,6 +215,7 @@
 
             }
 
+
     }
 
     .login-link {
@@ -256,4 +257,11 @@
     align-items: center;
     justify-items: center;
     gap: 0.5em;
+
+
+    @media (max-width:770px) {
+        justify-self: end;
+
+        
+    }
 }
