--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -12,6 +12,16 @@ justify-items: center;
 padding: 0px 0.5em 1em 0.5em;
 z-index: 4;
 
+@media (max-width:770px) {
+    border-radius: 8px;
+    margin: 0em 0.4em 0em 0.4em;
+    margin-inline-start: 0.5em;
+    margin-inline-end: 0.5em;
+    
+  
+    
+}
+
 
 
 // display: flex;
@@ -26,6 +36,22 @@ z-index: 4;
     justify-items: center;
     gap: 0.5em;
     align-self: end;
+
+    @media (max-width:770px) {
+        display: grid;
+            grid-template-columns: 50px 1fr 40px 40px;
+            // background-color: red;
+            .song-text-container{
+                justify-self: start;
+            }
+    
+            .mobile-play-container{
+                justify-self: end;
+                align-self: end;
+            }
+
+        
+    }
 
     .mobile-play-button{
         display: none;
@@ -48,6 +74,7 @@ svg{
     .play-bar-cover{
         width: 50px;
         border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
 
     .song-text-container{
