--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -14,6 +14,12 @@
     max-width: 100%;
     height: 265px;
     overflow: hidden;
+    @media (max-width:770px) {
+        
+        // height: calc(50vw);
+        
+        
+    }
     
     .station-container{
         cursor: pointer;
@@ -21,14 +27,19 @@
         border-radius: 8px;
         transition: 0.2s;
         width: 11vw;
-
+        
         height: 265px;
-
-   
-   &:hover{
-       
-       background-color: rgba(255, 255, 255, 0.141);  
-       .playlist-cover-overlay{
+        
+        @media (max-width:770px) {
+    
+         width: 40vw;   
+            
+        }
+        
+        &:hover{
+            
+            background-color: rgba(255, 255, 255, 0.141);  
+            .playlist-cover-overlay{
 
            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
        }
@@ -45,10 +56,20 @@
         border-radius: 8px;
         width: 10vw;
         height: calc(10vw);
+        @media (max-width:770px) {
+    
+            width: 35vw;   
+
+           }
         img{
             width: 10vw;
             height: calc(10vw);
             border-radius: 8px;
+            @media (max-width:770px) {
+    
+                width: 35vw;   
+                height: calc(35vw);   
+               }
         }
         .playlist-cover-overlay {
             border-radius: 8px;
