--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -6,6 +6,11 @@
     container-type: inline-size;
     transition: 2s;
     // position: relative;
+    
+    @media (max-width:770px) {
+        height: calc(100vh - 250px);
+        overflow-x: hidden;
+    }
 
     &::after{
         content: '';
@@ -22,6 +27,7 @@
     transition: 0.3s;
     width: 100%;
     height: calc(155%);
+    height: calc(110vh);
     overflow: hidden;
     position: absolute;
     z-index: -1;
@@ -83,6 +89,13 @@
       }
 
     padding: 1em;
+    @media (max-width:770px) {
+        gap: 0.5em;
+
+        padding: 0.5em;
+
+        
+    }
     .station-container{
         // width: 20vw;
 
@@ -96,10 +109,21 @@
         
         min-height: 60px;
         height: fit-content;
-
-
+        
+        
         transition: 0.2s;
         cursor: pointer;
+        
+        @media (max-width:770px) {
+            
+            gap: 3px;
+            grid-template-columns: auto 1fr 30px;
+            span{
+                font-size: 0.6em;
+
+            }
+           
+        }
         
         
         &:hover{
@@ -156,6 +180,12 @@
             width: clamp(16px, 5vw, 42px);
             height: clamp(16px, 5vw, 42px);
 
+            @media (max-width:770px) {
+                margin: 0px;
+              
+                
+            }
+
         }
         .play-button, .pause-button{
             display: none;
@@ -196,20 +226,37 @@
 
             width: clamp(16px, 5vw, 42px);
             height: clamp(16px, 5vw, 42px);
+             @media (max-width:770px) {
+
+                width: 300px;
+
+                }
             display: flex;
             svg{
                 margin-inline-start: 0.8em;
                 justify-self: center;
                 align-self: center;
-
+                @media (max-width:770px) {
+                    
+                    margin-inline-start: 0.4em;
+                    
+                }
                 // width: 50%;
                 // height: 50%;
+               
             }
 
         }
         
         .play-button:hover, .pause-button:hover {
             transform: scale(1.05);
+
+        }
+        .play-button, .pause-button {
+            @media (max-width:770px) {
+                display: none;
+                
+            }
 
         }
 
